# backyard

./: .gitignore  AGENTS.md  Makefile  readme.md
containers/llama.cpp/: Dockerfile.cuda  Dockerfile.rocm  Dockerfile.rocm.7.11
docs/rocm/: ROCM_7.11.md  ROCM_BUILD_GFX1031.md  ROCM_VRAM_CLEANUP.md
src/backend/: Cargo.toml  tauri.conf.json
src/backend/capabilities/: default.json
src/backend/src/: config.rs  main.rs  memory.rs
src/backend/src/cli/: mod.rs
src/backend/src/orchestrator/: mod.rs
src/backend/src/server/: mod.rs
src/backend/src/state/: fs.rs  mod.rs
src/frontend/: package.json  tsconfig.json  vite.config.ts
src/frontend/static/css/: style.css
src/frontend/static/js/: app.js
src/frontend/templates/: auth.html  index.html
src/scripts/: Makefile  build.bat  run.bat
