[package]
name = "backyard"
version = "0.1.0"
edition = "2021"

[package.metadata]
# Tauri v2 metadata

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
clap = { version = "4.5", features = ["derive"] }
bollard = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.39", features = ["bundled"] }
anyhow = "1.0"
thiserror = "2.0"
futures-util = "0.3"
hyper = "1.6"
http-body-util = "0.1"
tower = "0.5"
reqwest = { version = "0.13", features = ["json"] }
walkdir = "2.5"
